--- a/index.html
+++ b/index.html
@@ -47,15 +47,6 @@
           <img class="logo" src="assets/images/logo.svg" alt="logo image" />
         </a>
 
-        <button
-          class="nav-toggle-btn"
-          aria-label="Toggle Menu"
-          data-nav-toggle-btn
-        >
-          <ion-icon name="menu-outline" class="menu-icon"></ion-icon>
-          <ion-icon name="close-outline" class="close-icon"></ion-icon>
-        </button>
-
         <nav class="navbar container">
           <ul class="navbar-list">
             <li>
@@ -83,28 +74,23 @@
             <li>
               <a href="#blog" class="navbar-link" data-nav-link>Blog</a>
             </li>
-
-            <li>
-              <button
-                id="toggleModes"
-                class="navbar-link toggleModeMobile"
-                data-nav-toggler
-              >
-                <ion-icon name="sunny-outline" aria-hidden="true"></ion-icon>
-              </button>
-            </li>
           </ul>
         </nav>
 
         <li>
-          <button
-            id="toggleMode"
-            class="navbar-link toggleModeDesktop"
-            data-nav-toggler
-          >
+          <button id="toggleMode" class="navbar-link" data-nav-toggler>
             <ion-icon name="sunny-outline" aria-hidden="true"></ion-icon>
           </button>
         </li>
+
+        <button
+          class="nav-toggle-btn"
+          aria-label="Toggle Menu"
+          data-nav-toggle-btn
+        >
+          <ion-icon name="menu-outline" class="menu-icon"></ion-icon>
+          <ion-icon name="close-outline" class="close-icon"></ion-icon>
+        </button>
       </div>
     </header>
 
@@ -734,7 +720,7 @@
 
     <a href="#top" class="back-to-top" data-back-to-top>BACK TOP</a>
 
-    <!-- Your existing scripts -->
+    <!-- My scripts -->
     <script src="./assets/js/script.js"></script>
     <script src="./assets/js/theme_toggle.js"></script>
 
