--- a/index.html
+++ b/index.html
@@ -715,10 +715,20 @@
     </footer>
 
     <!--
-        - #BACK TO TOP
+        - #BACK TO TOP VERSION 1
     -->
 
+    <!--
     <a href="#top" class="back-to-top" data-back-to-top>BACK TOP</a>
+    -->
+
+    <!--
+        - #BACK TO TOP VERSION 2
+    -->
+
+    <a href="#top" class="back-top-btn" data-back-to-top>
+      <ion-icon name="arrow-up-outline" aria-hidden="true"></ion-icon>
+    </a>
 
     <!-- My scripts -->
     <script src="./assets/js/script.js"></script>
